<resources>
    <string name="app_name">Contact_Storage</string>
    <string name="contact_list">Contact List</string>
    <string name="add_contact">Add Contact</string>
    <string name="contact_form">CONTACT FORM</string>
    <string name="save">Save</string>
    <string name="e_mail">E-Mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="searchlayout">searchLayout</string>
    <string name="exit">Exit</string>

</resources>
