<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_dark_background"
        android:text="@string/contact_form"
        android:paddingBottom="10dp"

        android:focusable="true"

        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="50dp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textAlignment="center" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#50A5E8"
        android:layout_marginTop="10dp"
        android:shadowRadius="10"

        android:text="@string/save" />
    


</LinearLayout>